# meido

./: Cargo.toml  LICENSE  README.md
.github/: README.md
src/: category.rs  expander.rs  main.rs  node.rs  policy.rs  rule.rs  scan.rs  trash.rs  trash_buffer.rs
src/app/: gui.rs  message.rs  mod.rs  sizes.rs  state.rs  utils.rs
src/app/views/: categories.rs  category.rs  mod.rs
src/expanders/: bun.rs  cargo.rs  go.rs  gradle.rs  library.rs  m2.rs  mod.rs  npm.rs  spotify.rs
src/gui/: element.rs  message.rs  mod.rs  state.rs  theme.rs
src/gui/fonts/: inter.rs
src/gui/palette/: dark.rs  light.rs
src/gui/styles/: button.rs  checkbox.rs  container.rs  mod.rs  progress_bar.rs  scrollable.rs  svg.rs  text.rs
src/gui/views/: mod.rs
src/gui/views/about/: message.rs  state.rs
src/gui/views/scanner/: categories.rs  control_panel.rs  file_browser.rs  message.rs  mod.rs  state.rs
src/gui/widget/: bar.rs  column.rs  mod.rs  progress_bar.rs  row.rs  status_bar.rs  svg.rs  text.rs
src/rules/: cache.rs  disk_images.rs  electron.rs  go.rs  go_cache.rs  gradle.rs  maven.rs  mod.rs  node.rs  node_modules.rs  pdm_build.rs  python.rs  python_caches.rs  python_venvs.rs  rust.rs  rust_target.rs  vsc.rs  zig.rs  zig_build.rs  zig_cache.rs
